src/z80asm/z80asm2/t/20-preproc/expected/defgroup_15.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/defgroup_15.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/20-preproc/input/defgroup_15.asm...
t/20-preproc/input/defgroup_15.asm:1:10: error: Unexpected '}' in DEFGROUP directive
    defgroup } { ,, var1 ,, { var2 = 1+2*3 } ,, var3 ,, } 
             ^
# file: t/20-preproc/input/defgroup_15.asm
EndOfLine	"\n"	2:1	
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
symbol	__FLOAT_GENMATH__	1	(defined at )
